--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Syalo.in</h1>
-						<p>Syalo app &nbsp;&bull;&nbsp; Coming soon <br> A one stop solution to all your mental health needs <br> Because you, should be limitless &nbsp;&bull;&nbsp; Connect with us for more</p>
+						<p>Syalo app &nbsp;&bull;&nbsp; Coming soon &nbsp;&bull;&nbsp; Because you, should be limitless <br> A one stop solution to all your mental health needs <br> Connect with us for more</p>
 						<nav>
 							<ul>
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
